--- a/SIR.rmd
+++ b/SIR.rmd
@@ -1,6 +1,6 @@
 # SIR assumptions
-- Individuals belong to one of three groups, suseptible, infected or recovered
-- The normal SIR model assumes that recovered people cannot retun to the infected category, this is not the case with drug use, where relaspse is prevelant
+- Individuals belong to one of three groups, susceptible, infected or recovered
+- The normal SIR model assumes that recovered people cannot return to the infected category, this is not the case with drug use, where relapse is prevalent
 - Change is limited to day by day
 - the rate of movement between groups is linear such that:
 $$ \frac{ds}{dt} = -a \cdot s $$
@@ -9,39 +9,44 @@ $$ \frac{dr}{dt} =  -b \cdot r + c \cdot i $$
 It can be seen then:
 $$ \frac{dr}{dt} + \frac{dr}{dt} + \frac{dr}{dt} = 0 $$
 
-## Paramaters:
-a - rate people move from suseptible to infected as portion of total people
+## Parameters:
+a - rate people move from susceptible to infected as portion of total people
 b - rate people move from recovered to infected as portion of total people
 c - rate people move from infected to recovered as portion of total people
 
-- This model is iterative, meaning $x_{n+1} = A \cdot X_n$, which can then be expanded over time.
+- This model is iterative, meaning $x_{n+1} = A \cdot x_n$, which can then be expanded over time.
 
 ```{python}
 import numpy as np
-import pandas as pd
+import pandas
+import matplotlib.pyplot as plt
+pop_init = 1000
 
-pop_init = 100
+a = 0.001
+b = 0.1
+c = 0.5
 
-a = 0.1
-b = 0.01
-c = 0.2
+steps = 1000
 
-steps = 100
+vect_initial = np.array([pop_init,0,0]).T # vector of day index, suseptable, infected and recovered people
 
-vect_initial = np.array(pop_init,0,0]).T # vector of day index, suseptable, infected and recovered people
-
-matrix_step = np.array[ [1-a,0,0],
+matrix_step = np.array([ [1-a,0,0],
                         [a,1-c,b],
-                        [0,c,1-b]]
+                        [0,c,1-b]])
                         
                         
-output = pd.Dataframe(columns = ['day', 's', 'i', 'r'])
+output = pandas.DataFrame(columns = ['day', 's', 'i', 'r'])
 i = 0
 vect = vect_initial.copy()
 
-while i < steps
-output.loc[index] = np.concatenate(np.array([index]),vect.T)
-vect = np.matmul(matrix_step,vect)
-i+=1
+while i < steps:
+    output.loc[i] = np.concatenate((np.array([i]),vect.T))
+    vect = np.matmul(matrix_step,vect)
+    i+=1
 
+plt.plot(output['day'],output['s'])
+plt.plot(output['day'],output['i'])
+plt.plot(output['day'],output['r'])
+plt.legend(['s','i','r'])
+plt.show()
 ```
