--- a/final_report.rmd
+++ b/final_report.rmd
@@ -1,13 +1,15 @@
 ---
 title : 'Modeling Drug Use in Comunities'
-author:  'Alfie Chadwick, Kevin Dai, Cheysovalantis Thomopoulos'
+author:  'Alfie Chadwick, Kevin Dai, Chrysovalantis Thomopoulos'
 ---
 
 # Introduction
-For years, policymakers have been asking why and how do drugs travel through the community and what can they do to work minimise the harm they potentially  cause. In this paper, we aim to understand how drug use and addiction develops in a community and what factors can be tweaked to alter the short term and long term distributions of drug use and addiction in the community.
+For years, policymakers have been wondering why and how do drugs travel through the community and what they can do to minimise the harm they potentially  cause. In this paper, we aim to understand how drug use and addiction develops in a community and what factors can be tweaked to alter the short term and long term distributions of drug use, abuse and addiction in the community.
 
+The wide variety of past articles and research papers on the topic indicate the importance of the issue. One article in particular by Mushanyu, J, Nyabadza, F, Muchatibaya, G, & Stewart, A G. R. touches on the importance of an adequate health care system since a limited rehabilitation capacity can increase the chances of a drug abuse epidemic. The methods used in this paper are discussed further along our own.
 
-// Add in past research
+Also, another interesting article is 
+
 
 \newpage
 
@@ -16,7 +18,7 @@ For years, policymakers have been asking why and how do drugs travel through the
 ## Initial Model: SIR
 It's common to liken drug use to disease, treating drug addiction as an infection that can be recovered from. Using this analogy, we began looking into how diseases are modeled and how we can adapt this model to fit drug usage.
 One of the simplest drug models is the SIR model, a compartment model based on the concept of mass action that sees infections as caused by interactions between infected people and susceptible people.
-There are a few reasons that this model is good fit to begin modeling drug use:
+There are a few reasons that this model is a good fit to begin modeling drug use:
 Firstly, this model is very simple and easily adaptable to extra compartments or conditions on transfer.
 Secondly, since we are looking at drug use in a population, relying on mass action rather than discrete modeling allows us to simplify the model.
 Thirdly, the idea that addiction is caused by individuals interacting seems to be a good assumption for drug use as you would expect people to become addicted by being around other people with the drug.
@@ -28,7 +30,7 @@ $$\frac{dS}{dt} = -\pi_1 * S * I $$
 $$\frac{dI}{dt} = \pi_1 * S * I + \pi_2 * R * I - \pi_3 *  I $$
 $$\frac{dR}{dt} = -\pi_2 * R * I + \pi_3 * I $$
 
-With the parameters $\pi_1$,$\pi_2$ and $\pi_3$ representing the 'infectiosness' of the drug for susceptible people, the infectioness for recovering people and the rate of recovery for the drug respecivley.
+With the parameters $\pi_1$,$\pi_2$ and $\pi_3$ representing the 'infectiousness' of the drug for susceptible people, the infectiousness for recovering people and the rate of recovery for the drug respecivley.
 
 We can now look at some plots to see how this model plays out for various combinations of parameters:
 
@@ -73,7 +75,7 @@ SIR(0.0001,0.001, 0.1, 70,20,10,100)
 
 ## SUAR Model
 The SIR model fails to distingush between different severities of addiction. By grouping anyone who is trying the drug once to people who are addicteed in the same group we are failing to capture the behaviour of people trying the drug without becoming reliant on the drug.
-Because of this, we adapted the SIR model, renaming the infected group to addicted  and adding in a new group for users of the drug who are not addicted, labeled as the 'Using' group. Suseptible people will now move into the Using group before moving into the addicted group. Since there are now two groups who are using the drug and interacting with the community, the $I$ terms in the ODEs desribing the SIR now have to be replaced with $U+A$
+Because of this, we adapted the SIR model, renaming the infected group to addicted  and adding in a new group for users of the drug who are not addicted, labeled as the 'Using' group. Susceptible people will now move into the Using group before moving into the addicted group. Since there are now two groups who are using the drug and interacting with the community, the $I$ terms in the ODEs desribing the SIR now have to be replaced with $U+A$
 
 The new model can now be described with the folowing equations:
 
@@ -82,7 +84,7 @@ $$\frac{dU}{dt} =  \pi_1*S*(A+U) - \pi_2*U  - \pi_3*U $$
 $$\frac{dA}{dt} = \pi_3*U +\pi_4 *(A+U)*R - \pi_5*A $$
 $$\frac{dR}{dt} =  \pi_5*A - \pi_4 *(A+U)*R $$
 
-With parameters  $\pi_1$, $\pi_2$,  $\pi_3$, $\pi_4$, and $\pi_5$ being the 'infectivness' of the drug for suseptible people, the rate that people stop trying the drug, the rate that people bome addicted, the 'infectiveess' for recovered people and the recovery rate for addicted people respectivley.
+With parameters  $\pi_1$, $\pi_2$,  $\pi_3$, $\pi_4$, and $\pi_5$ being the 'infectiveness' of the drug for susceptible people, the rate that people stop trying the drug, the rate that people become addicted, the 'infectiveness' for recovered people and the recovery rate for addicted people respectivley.
 
 ```{python, echo = FALSE, fig2, fig.show="hold", out.width="50%" }
 def SUAR(p1,p2,p3, p4, p5 ,S0,U0,A0,R0,i):
@@ -124,7 +126,7 @@ SUAR(0.001,0.001,0.001, 0.01, 0.001 ,60,20,10,10,100)
 ```
 
 ## SUAR Model with age
-Looking at the stationary points of the previous two models (see appendix for derivation), the only long term behaviour is to either kill off the drug and have no users or addicted people or have eveyone in the addicted or recovered group. However, this behaviour is not consistent with what we see in the real world, where we have a consitent number of people using and addicted to the drug, and a consistently high number of people who are suseptible to the drug. To fix we add age groups into the model, grouping them as children, teens, young adults, adults and seniors. Each of these groups have a distinct rate of death and births are porportioal to the number of young adults and adults. Seperating these groups also allows us to set different parameters according to each age group, capturing more nuanced beahviours such as more experiementation in young people.
+Looking at the stationary points of the previous two models (see appendix for derivation), the only long term behaviour is to either kill off the drug and have no users or addicted people or have eveyone in the addicted or recovered group. However, this behaviour is not consistent with what we see in the real world, where we have a consistent number of people using and addicted to the drug, and a consistently high number of people who are susceptible to the drug. To fix we add age groups into the model, grouping them as children, teens, young adults, adults and seniors. Each of these groups have a distinct rate of death and births are porportioal to the number of young adults and adults. Seperating these groups also allows us to set different parameters according to each age group, capturing more nuanced beahviours such as more experiementation in young people.
 
 Another feture we wanted to tackle is how people recover. In the same way that people start using drugs based on interactions with others who are using the drug, we expect people to recover based on interactions with people who aren't using the drug. This can be represented by support groups, concered parents or friends. Furthermore, we can expect people in one agegroup to be influence by different ammoint from each agregreoup. We can store this information with a matrix $I$, where $I_{ij}$ is the magnitude of the influence that group j has on group i.
 We can now go in to further simplify this by defining two new terms, the positive and negitive influence on a age group $i$, to be:
@@ -343,15 +345,19 @@ $$ \frac{d\frac{R}{N}}{dt} = \frac{(A\pi_4P - R\pi_5N - d_RR )N-N'R}{N^2} $$
 # Discussion
 
 // Compare our model
-// Insparations
-// Limitaion
-// Future stuff
+// Inspirations
+// Limitations
+// Future Tweaks
+
+Firstly, one of the main differences between the aforementioned model and ours is the overall use of compartment models/blocks. A similar alteration of the basic SIR model has taken place.In this instance SL(t) represent the population at low risk of being initiated into drug abuse and the class SH(t) represents the population at high risk being initiated into drug abuse. Also Rop(t) stands for rehabilitation as outpatients and Rip(t) stands for the rehabilitation as inpatients.
+This form of compartment model may be deemed to be more accurate since in our case we have settled for a simple compartment for the susceptible and recovered population but have made the addicted compartment more intricate. The Hill Function and center manifold theory have been used as well and in our case could have enrichen our own research.
+
 
 \newpage
 
-# Connclution
+# Conclusion
 
-// Conclution
+// Conclusion
 
 
 \newpage
